# mlops-zoomcamp

./: README.md  pyproject.toml
week1/: .gitignore  homework.ipynb
week2/: .gitignore  homework.ipynb  hpo.py  register_model.py  train.py
