[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["jjovalle99 <jj.ovalle@uniandes.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.4.2"
mlflow = "^2.13.0"
hyperopt = "^0.2.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
